// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal When the modal is hidden should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="modal"
    data-testid="modal"
  >
    <div
      class="modal-background"
    />
    <div
      class="modal-content"
    >
      <div
        class="box"
      >
        <button
          aria-label="close"
          class="modal-close is-large"
          data-testid="modalClose"
        />
        <div
          class="content"
        >
          <p>
            Modal content
          </p>
        </div>
        <div
          class="field is-grouped is-justify-content-center"
        >
          <div
            class="control"
          >
            <button
              class="button is-primary"
              data-testid="modalOk"
            >
              <span
                class="icon"
              >
                <i
                  class="fas fa-check"
                />
              </span>
              <span>
                OK
              </span>
            </button>
          </div>
          <div
            class="control"
          >
            <button
              class="button is-light"
              data-testid="modalCancel"
            >
              <span
                class="icon"
              >
                <i
                  class="fas fa-times"
                />
              </span>
              <span>
                Cancel
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal When the modal is visible should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="modal is-active"
    data-testid="modal"
  >
    <div
      class="modal-background"
    />
    <div
      class="modal-content"
    >
      <div
        class="box"
      >
        <button
          aria-label="close"
          class="modal-close is-large"
          data-testid="modalClose"
        />
        <div
          class="content"
        >
          <p>
            Modal content
          </p>
        </div>
        <div
          class="field is-grouped is-justify-content-center"
        >
          <div
            class="control"
          >
            <button
              class="button is-primary"
              data-testid="modalOk"
            >
              <span
                class="icon"
              >
                <i
                  class="fas fa-check"
                />
              </span>
              <span>
                OK
              </span>
            </button>
          </div>
          <div
            class="control"
          >
            <button
              class="button is-light"
              data-testid="modalCancel"
            >
              <span
                class="icon"
              >
                <i
                  class="fas fa-times"
                />
              </span>
              <span>
                Cancel
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
